# dwarvesvsgoblins

./: .gitignore  CMakeLists.txt  README.md
libs/: README
src/: CMakeLists.txt  dvg_config.h  dvg_config.in  main.cpp
src/components/: component.h  event_component.h  logic_component.h
src/fmw/: app_state.h  app_state_manager.cpp  app_state_manager.h  ogre_framework.cpp  ogre_framework.h
src/game/: map.cpp  map.h  map_logic.cpp  map_logic.h  position.h  position_component.cpp  position_component.h  tile.cpp  tile.h  wall_tile.cpp  wall_tile.h
src/game/components/: map_logic_component.cpp  map_logic_component.h
src/game/tiles/: ground_tile.cpp  ground_tile.h  tile.cpp  tile.h  tile_factory.cpp  tile_factory.h  wall_tile.cpp  wall_tile.h
src/game/units/: imp_unit_logic.cpp  imp_unit_logic.h  simple_unit_logic.cpp  simple_unit_logic.h
src/graphics/: map_renderer.cpp  map_renderer.h  renderable_component.cpp  renderable_component.h  renderer_interface.h  rendering_manager.cpp  rendering_manager.h  resource_manager.cpp  resource_manager.h  simple_render_component.cpp  simple_render_component.h  simple_renderer.cpp  simple_renderer.h
src/graphics/components/: map_render_component.cpp  map_render_component.h  simple_render_component.cpp  simple_render_component.h
src/map/: map.cpp  map.h  tile.cpp  tile.h
src/map/entity/: entity.cpp  entity.h  entity_manager.h
src/python/: example.cpp  example_c.h
src/utils/: default_component_manager.h  game_component.h  game_component_manager.h  game_object.cpp  game_object.h  game_object_manager.h  gamecomponent.h  gameobject.h  map.json  map_data.cpp  map_data.h  map_loader.cpp  map_loader.h  message.h  position_component.cpp  position_component.h  quadtree.cpp  quadtree.h  rectangle.cpp  rectangle.h  scene_manager.cpp  scene_manager.h  tile.h  tile_set_data.cpp  tile_set_data.h  tile_set_loader.cpp  tile_set_loader.h  vector2d.h
src/utils/components/: component.h  event_component.h  game_object.cpp  game_object.h  input_component.h  logic_component.h  render_component.h
tests/: CMakeLists.txt  README  demo.cpp  main.cpp  message.cpp  quadtree.cpp  rectangle.cpp  vector2d.cpp
tests/fmw_test/: demo_app.cpp  demo_app.h  game_state.cpp  game_state.h  menu_state.cpp  menu_state.h  pause_state.cpp  pause_state.h
